--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         setTimeout(() => {
           loader.style.display = "none";
         }, 4000);
-        setTimeout(() => {
-          main.style.display = "block";
-        }, 4000);
+        // setTimeout(() => {
+        //   main.style.display = "block";
+        // }, 1);
       </script>
   </body>
 </html>
